# itmo-cv-labs

./: README.md  tempCodeRunnerFile.cpp  tempCodeRunnerFile.python
lab1/: 1.cpp  CMakeLists.txt  task.ipynb  task2.ipynb
lab2/: 1.cpp  CMakeLists.txt  lab2.cpp
lab2/report/: content.aux  content.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  unformal_title.aux
lab2/src/: lab2.cpp
lab3/: CMakeLists.txt
lab3/report/: content.aux  content.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
lab3/src/: lab3.cpp
lab4/: CMakeLists.txt
lab4/report/: content.aux  content.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
lab4/src/: lab4.cpp
lab5/: CMakeLists.txt
lab5/report/: content.aux  content.tex  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  unformal_title.aux
lab5/src/: lab5.cpp
lab6/: CMakeLists.txt
lab6/report/: content.aux  content.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  unformal_title.tex
lab6/src/: lab6.cpp
